lab/local/k8s/chaos/deny-connect-to-oracle.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-connect-to-oracle
  namespace: cdc
spec:
  podSelector:
    matchLabels:
      app: oracle
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: strimzi.io/name
                operator: NotIn
                values: [connect-connect]
